# test1

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  INSTALL_INTERNAL_PACKAGE.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/foundation/: README.md  pyproject.toml
backend/foundation/platform_foundation/: __init__.py
backend/foundation/platform_foundation/contracts/: __init__.py  pdf_items.py
backend/foundation/platform_foundation/inference/: __init__.py  mineru.py  paddle_document.py  paddle_table.py
backend/foundation/platform_foundation/ocr/: __init__.py  mineru_layout.py  mineru_layout_paddle_table.py  paddle_table_api.py  pdf_extract.py  pure_mineru.py
backend/foundation/platform_foundation/operators/: __init__.py  base.py  contracts.py  io_arrow.py  layout_extract_mineru.py  layout_extract_mineru_paddle_table.py  registry.py
backend/foundation/platform_foundation/operators/adapters/: __init__.py  daft.py  ray_data.py
backend/foundation/platform_foundation/operators/examples/: __init__.py  normalize_ocr_text.py
backend/foundation/platform_foundation/operators/mapper/: en_text_uppercase_mapper.py
backend/foundation/platform_foundation/pipeline/: __init__.py
backend/foundation/platform_foundation/rules_engine/: __init__.py
backend/foundation/platform_foundation/rules_engine/resources/: rules_and_knowledge.csv
backend/foundation/tests/: test_layout_extract_mineru_operator.py  test_mineru_layout_operate.py  test_normalize_ocr_text_operator.py  test_paddle_device_resolution.py  test_paddle_full_pipeline.py  test_paddle_table_api.py  test_pdf_items_contracts.py
backend/services/platform-api/app/: __init__.py  bootstrap.py  config.py  main.py
backend/services/platform-api/app/api/: __init__.py  deps.py  responses.py
backend/services/platform-api/app/schemas/: __init__.py  mineru_layout.py
backend/services/platform-api/app/services/: __init__.py  mineru_layout_service.py
backend/services/platform-api/tests/: test_config.py  test_mineru_layout_api.py  test_mineru_layout_service.py
docker/: Dockerfile  entrypoint.sh  (+3 more)
(+46 files in other folders)
