[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "celery[redis]>=5.4.0",
    "fastapi>=0.129.0",
    "redis>=5.0.0",
    "openai>=1.0.0",
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.3.1",
    "paddlex[ocr]>=3.5.0,<3.6.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    "mineru>=2.7.6",
    "torch<2.6",
    "doclayout-yolo>=0.0.4",
    "ultralytics>=8.4.24",
    "tokenizers>=0.22.2",
    "transformers<5",
    "ftfy>=6.3.1",
    "dill>=0.4.1",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
ray = ["ray[default]>=2.10.0,<2.43.0"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "load: slow capacity/load tests; require live API, Redis, Celery, and typically RUN_LOADTEST=1",
]
# 默认不收集 @pytest.mark.load，避免本地/CI 误跑重负载用例；显式跑：pytest tests/loadtest -m load
addopts = ["-m", "not load"]
